syntax = "proto3";

option java_multiple_files = true;
option java_package = "gtunnel";
option java_outer_classname = "GTunnel";

package gtunnel;

service GTunnel {
  // Gets a stream of control messages from the server
  rpc CreateEndpointControlStream(EndpointControlMessage) returns (stream EndpointControlMessage) {}
  rpc CreateTunnelControlStream(stream TunnelControlMessage) returns (stream TunnelControlMessage) {} 
  rpc GetConfigurationMessage(empty) returns (ConfigurationMessage) {}

  // Bidirectional stream for data
  rpc CreateConnectionStream(stream BytesMessage) returns (stream BytesMessage) {}
}

message empty {}

message ConfigurationMessage {
  string endpointID = 1;
  int32 killDate = 2;
}

message EndpointControlMessage {
  int32 operation = 1;
  string endpointID = 2;
  string tunnelID = 3;
  int32 errorStatus = 4;
  uint32 localIp = 5;
  uint32 localPort = 6;
  uint32 remoteIP = 7;
  uint32 remotePort = 8;
}

message TunnelControlMessage {
  int32 operation = 1;
  int32 errorStatus = 2;
  string endpointID = 3;
  string tunnelID = 4;
  int32 connectionID = 5;
}

message BytesMessage {
  string endpointID = 1;
  string tunnelID = 2;
  int32 connectionID = 3;
  bytes Content = 4;
}
